kubernetes/nginx-ingress-controller/example-ingresses/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dragonx-aks.southeastasia.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: dragonx-aks.southeastasia.cloudapp.azure.com
    http:
      paths:
      - path: /portainer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
